--- a/plot_data.ipynb
+++ b/plot_data.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aS1_jm6mCryd"
       },
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -259,18 +259,17 @@
     {
       "cell_type": "code",
       "source": [
+        "#fit weibull distribution to each station's data  (without taking seasons into account)\n",
         "for station_name, df_2024 in whole_data.items():\n",
         "    # Fit Weibull distribution\n",
-        "    shape, loc, scale = weibull_min.fit(df_2024['wdsp'].dropna(), floc = 0)  # Drop NaN values\n",
+        "    shape, loc, scale = weibull_min.fit(df_2024['wdsp'].dropna(), floc = 0)  #drop na values\n",
         "\n",
-        "    # Generate data for the Weibull distribution plot\n",
         "    x = np.linspace(df_2024['wdsp'].min(), df_2024['wdsp'].max(), 100)\n",
         "    pdf = weibull_min.pdf(x, shape, scale=scale)\n",
         "\n",
-        "    # Create plots\n",
         "    plt.figure(figsize=(12, 6))\n",
         "\n",
-        "    # Histogram\n",
+        "    # histogram and weibull distribution plot\n",
         "    plt.subplot(1, 2, 1)\n",
         "    plt.hist(df_2024['wdsp'], bins=30, density=True, alpha=0.6, label='Data')\n",
         "    plt.plot(x, pdf, label='Weibull Fit')\n",
@@ -280,7 +279,7 @@
         "    plt.legend()\n",
         "\n",
         "\n",
-        "    # Weibull Distribution Plot\n",
+        "    # Weibull Distribution Plot alone\n",
         "    #plt.subplot(1, 2, 2)\n",
         "    #plt.plot(x, pdf, label='Weibull Distribution')\n",
         "    #plt.title(f'Weibull Distribution Fit for {station_name}')\n",
@@ -393,6 +392,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#fit weibull distribution to each station's data for every seasons\n",
+        "\n",
         "seasons = {\n",
         "    'Winter1': ('2024-01-01', '2024-03-19'),\n",
         "    'Spring': ('2024-03-20', '2024-06-20'),\n",
@@ -402,7 +403,7 @@
         "}\n",
         "\n",
         "\n",
-        "# Merge Winter1 and Winter2 into a single \"Winter\"\n",
+        "# merge Winter1 and Winter2 into a single \"Winter\"\n",
         "merged_seasons = {\n",
         "    'Winter': (pd.to_datetime(seasons['Winter1'][0]), pd.to_datetime(seasons['Winter2'][1])),\n",
         "    'Spring': (pd.to_datetime(seasons['Spring'][0]), pd.to_datetime(seasons['Spring'][1])),\n",
@@ -410,41 +411,34 @@
         "    'Autumn': (pd.to_datetime(seasons['Autumn'][0]), pd.to_datetime(seasons['Autumn'][1]))\n",
         "}\n",
         "\n",
-        "# Loop through each station\n",
         "for station_name, df_2024 in whole_data.items():\n",
         "    df_2024['date'] = pd.to_datetime(df_2024['date'])\n",
         "\n",
-        "    # Create a new figure for the station with 4 subplots (one per season)\n",
         "    plt.figure(figsize=(12, 10))\n",
         "    plt.suptitle(f\"Weibull Distribution Fit for {station_name}\", fontsize=14)\n",
         "\n",
-        "    # Loop through seasons and plot in corresponding subplot\n",
         "    for i, (season_name, (start_date, end_date)) in enumerate(merged_seasons.items(), start=1):\n",
-        "        plt.subplot(2, 2, i)  # 2x2 grid with only 4 seasons\n",
+        "        plt.subplot(2, 2, i)\n",
         "\n",
-        "        # Filter data for the current season\n",
+        "        # filter data for the current season\n",
         "        season_df = df_2024[(df_2024['date'] >= start_date) & (df_2024['date'] <= end_date)]\n",
-        "        wind_speeds = season_df['wdsp'].dropna().values  # Drop NaN values\n",
+        "        wind_speeds = season_df['wdsp'].dropna().values  #drop na values\n",
         "\n",
         "        if len(wind_speeds) > 0:\n",
         "            # Fit Weibull distribution\n",
         "            shape, loc, scale = weibull_min.fit(wind_speeds, floc=0)\n",
-        "\n",
-        "            # Generate Weibull PDF data\n",
         "            x = np.linspace(wind_speeds.min(), wind_speeds.max(), 100)\n",
         "            pdf = weibull_min.pdf(x, shape, scale=scale)\n",
         "\n",
-        "            # Plot histogram and Weibull fit\n",
+        "            # plot histogram and Weibull fit\n",
         "            plt.hist(wind_speeds, bins=30, density=True, alpha=0.6, label=\"Data\", color='gray')\n",
         "            plt.plot(x, pdf, label=f'Weibull Fit\\nβ={shape:.2f}, α={scale:.2f}', color='red')\n",
         "\n",
-        "        # Titles and labels\n",
         "        plt.title(f\"{season_name}\", fontsize=12)\n",
         "        plt.xlabel(\"Wind Speed (knots)\")\n",
         "        plt.ylabel(\"Density\")\n",
         "        plt.legend(fontsize=10)\n",
         "\n",
-        "    # Adjust layout and show plot\n",
         "    plt.tight_layout(rect=[0, 0, 1, 0.96])  # Adjust for suptitle\n",
         "    plt.show()"
       ],
@@ -456,7 +450,7 @@
           "height": 1000
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
