--- a/plot_data.ipynb
+++ b/plot_data.ipynb
@@ -259,10 +259,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#fit weibull distribution to each station's data  (without taking seasons into account)\n",
+        "#fit weibull distribution to each station's data  (without taking seasons into account) using maximum of likelihood method\n",
         "for station_name, df_2024 in whole_data.items():\n",
         "    # Fit Weibull distribution\n",
-        "    shape, loc, scale = weibull_min.fit(df_2024['wdsp'].dropna(), floc = 0)  #drop na values\n",
+        "    shape, loc, scale = weibull_min.fit(df_2024['wdsp'].dropna(), floc = 0)  #drop na values, ml method\n",
         "\n",
         "    x = np.linspace(df_2024['wdsp'].min(), df_2024['wdsp'].max(), 100)\n",
         "    pdf = weibull_min.pdf(x, shape, scale=scale)\n",
@@ -392,7 +392,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#fit weibull distribution to each station's data for every seasons\n",
+        "#fit weibull distribution to each station's data for every seasons using maximum of likelihood method\n",
         "\n",
         "seasons = {\n",
         "    'Winter1': ('2024-01-01', '2024-03-19'),\n",
@@ -422,7 +422,7 @@
         "\n",
         "        # filter data for the current season\n",
         "        season_df = df_2024[(df_2024['date'] >= start_date) & (df_2024['date'] <= end_date)]\n",
-        "        wind_speeds = season_df['wdsp'].dropna().values  #drop na values\n",
+        "        wind_speeds = season_df['wdsp'].dropna().values  #drop na values, ml method\n",
         "\n",
         "        if len(wind_speeds) > 0:\n",
         "            # Fit Weibull distribution\n",
