Obtained evaluation per station

--- a/plot_data.ipynb
+++ b/plot_data.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 2,
       "metadata": {
         "id": "aS1_jm6mCryd"
       },
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -35,7 +35,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_22620\\1380950483.py:33: SettingWithCopyWarning: \n",
+            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_33096\\1380950483.py:33: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -57,7 +57,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_22620\\1380950483.py:33: SettingWithCopyWarning: \n",
+            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_33096\\1380950483.py:33: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -79,7 +79,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_22620\\1380950483.py:33: SettingWithCopyWarning: \n",
+            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_33096\\1380950483.py:33: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -101,7 +101,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_22620\\1380950483.py:33: SettingWithCopyWarning: \n",
+            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_33096\\1380950483.py:33: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -123,7 +123,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_22620\\1380950483.py:33: SettingWithCopyWarning: \n",
+            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_33096\\1380950483.py:33: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -764,18 +764,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Average Evaluation Results Across All Seasons:\n",
+            "Average Evaluation Results for Belmullet Across All Seasons:\n",
             "                    MAE      RMSE  R-squared  KS Statistic  CvM Statistic\n",
-            "Power Density  0.008801  0.013868   0.820943      0.063396       1.859328\n",
-            "Least Squares  0.008799  0.013675   0.824832      0.055434       1.578147\n",
-            "MLE            0.008829  0.013892   0.820494      0.064856       1.931550\n"
+            "Power Density  0.006785  0.010615   0.836715      0.048241       1.209035\n",
+            "Least Squares  0.006758  0.010473   0.840820      0.052902       0.964970\n",
+            "MLE            0.006756  0.010611   0.836818      0.053339       1.231451\n",
+            "\n",
+            "Average Evaluation Results for Casement Across All Seasons:\n",
+            "                    MAE      RMSE  R-squared  KS Statistic  CvM Statistic\n",
+            "Power Density  0.006599  0.011337   0.868041      0.059594       1.753330\n",
+            "Least Squares  0.006702  0.011154   0.871840      0.055804       1.517772\n",
+            "MLE            0.006599  0.011312   0.868336      0.058761       1.834166\n",
+            "\n",
+            "Average Evaluation Results for Finner Across All Seasons:\n",
+            "                    MAE      RMSE  R-squared  KS Statistic  CvM Statistic\n",
+            "Power Density  0.006377  0.010714   0.864816      0.054851       1.462862\n",
+            "Least Squares  0.006347  0.010523   0.868895      0.049946       1.272396\n",
+            "MLE            0.006425  0.010741   0.864220      0.051914       1.545735\n",
+            "\n",
+            "Average Evaluation Results for Johnstown Castle Across All Seasons:\n",
+            "                    MAE      RMSE  R-squared  KS Statistic  CvM Statistic\n",
+            "Power Density  0.017198  0.025284   0.710735      0.081878       3.737013\n",
+            "Least Squares  0.017229  0.024895   0.716798      0.072658       3.072808\n",
+            "MLE            0.017293  0.025391   0.709051      0.094750       3.876724\n",
+            "\n",
+            "Average Evaluation Results for Sherkin Island Across All Seasons:\n",
+            "                    MAE      RMSE  R-squared  KS Statistic  CvM Statistic\n",
+            "Power Density  0.007046  0.011388   0.824407      0.054240       1.134401\n",
+            "Least Squares  0.006960  0.011331   0.825806      0.051862       1.062790\n",
+            "MLE            0.007074  0.011404   0.824045      0.052375       1.169673\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\hassa\\AppData\\Local\\Temp\\ipykernel_33096\\2021517941.py:84: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_2024['date'] = pd.to_datetime(df_2024['date'])\n"
           ]
         }
       ],
@@ -860,16 +897,16 @@
         "    \n",
         "    return mae, rmse, r_squared, ks_statistic, cvm_statistic\n",
         "\n",
-        "# Initialize a dictionary to store aggregated evaluation results\n",
-        "aggregated_results = {\n",
-        "    'Power Density': {'MAE': [], 'RMSE': [], 'R-squared': [], 'KS Statistic': [], 'CvM Statistic': []},\n",
-        "    'Least Squares': {'MAE': [], 'RMSE': [], 'R-squared': [], 'KS Statistic': [], 'CvM Statistic': []},\n",
-        "    'MLE': {'MAE': [], 'RMSE': [], 'R-squared': [], 'KS Statistic': [], 'CvM Statistic': []}\n",
-        "}\n",
+        "\n",
         "\n",
         "for station_name, df_2024 in whole_data.items():\n",
         "    df_2024['date'] = pd.to_datetime(df_2024['date'])\n",
-        "\n",
+        "    # Initialize a dictionary to store aggregated evaluation results\n",
+        "    aggregated_results = {\n",
+        "        'Power Density': {'MAE': [], 'RMSE': [], 'R-squared': [], 'KS Statistic': [], 'CvM Statistic': []},\n",
+        "        'Least Squares': {'MAE': [], 'RMSE': [], 'R-squared': [], 'KS Statistic': [], 'CvM Statistic': []},\n",
+        "        'MLE': {'MAE': [], 'RMSE': [], 'R-squared': [], 'KS Statistic': [], 'CvM Statistic': []}\n",
+        "    }\n",
         "    for season_name, (start_date, end_date) in merged_seasons.items():\n",
         "        # Filter data for the current season\n",
         "        season_df = df_2024[(df_2024['date'] >= start_date) & (df_2024['date'] <= end_date)]\n",
@@ -902,18 +939,19 @@
         "            aggregated_results['MLE']['R-squared'].append(r2_mle)\n",
         "            aggregated_results['MLE']['KS Statistic'].append(ks_mle)\n",
         "            aggregated_results['MLE']['CvM Statistic'].append(cvm_mle)\n",
-        "average_results = {}\n",
-        "for method, metrics in aggregated_results.items():\n",
-        "    average_results[method] = {\n",
-        "        'MAE': np.mean(metrics['MAE']),\n",
-        "        'RMSE': np.mean(metrics['RMSE']),\n",
-        "        'R-squared': np.mean(metrics['R-squared']),\n",
-        "        'KS Statistic': np.mean(metrics['KS Statistic']),\n",
-        "        'CvM Statistic': np.mean(metrics['CvM Statistic'])\n",
-        "    }\n",
-        "average_results_df = pd.DataFrame(average_results).T\n",
-        "print(\"Average Evaluation Results Across All Seasons:\")\n",
-        "print(average_results_df)"
+        "    average_results = {}\n",
+        "    for method, metrics in aggregated_results.items():\n",
+        "        average_results[method] = {\n",
+        "            'MAE': np.mean(metrics['MAE']),\n",
+        "            'RMSE': np.mean(metrics['RMSE']),\n",
+        "            'R-squared': np.mean(metrics['R-squared']),\n",
+        "            'KS Statistic': np.mean(metrics['KS Statistic']),\n",
+        "            'CvM Statistic': np.mean(metrics['CvM Statistic'])\n",
+        "        }\n",
+        "    average_results_df = pd.DataFrame(average_results).T\n",
+        "    print(f\"Average Evaluation Results for {station_name} Across All Seasons:\")\n",
+        "    print(average_results_df)\n",
+        "    print()"
       ]
     }
   ],
