--- a/plot_data.ipynb
+++ b/plot_data.ipynb
@@ -362,8 +362,8 @@
       ],
       "source": [
         "#fit weibull distribution to each station's data  (without taking seasons into account) using maximum of likelihood method\n",
-        "#df_2024['wdsp'] = pd.to_numeric(df_2024['wdsp'], errors='coerce')\n",
-        "#df_2024['wdsp'] = df_2024['wdsp'] * 0.5144 #knots into m/s\n",
+        "df_2024['wdsp'] = pd.to_numeric(df_2024['wdsp'], errors='coerce')\n",
+        "df_2024['wdsp'] = df_2024['wdsp'] * 0.5144 #knots into m/s\n",
         "\n",
         "\n",
         "for station_name, df_2024 in whole_data.items():\n",
